--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
+								<h1>刘丰历险记！</h1>
 								<p> 来自 <a href="https://www.luogu.com.cn/user/478461">刘丰</a> 的一段传奇故事！<br/>
 								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
 							</div>
