--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">刘丰是谁？</a></li>
-								<!-- <li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
-								<li><a href="#contact">Contact</a></li> -->
+								<li><a href="#lf_intro">刘丰是谁？</a></li>
+								<li><a href="#joke">搞图</a></li>
+								<!-- <li><a href="#about">About</a></li> -->
+								<!-- <li><a href="#contact">Contact</a></li> -->
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -44,20 +44,19 @@
 					<div id="main">
 
 						<!-- Intro -->
-							<article id="intro">
+							<article id="lf_intro">
 								<h2 class="major">刘丰</h2>
 								<span class="image main"><img src="images/lf01.png" alt="" /></span>
 								<span class="image main"><img src="images/lf02.png" alt="" /></span>
 								<span class="image main"><img src="images/lf03.png" alt="" /></span>
+								<span class="image main"><img src="images/peace.gif" alt="" /></span>
 								<p>lf多才多艺，啥都会的。</p>
 							</article>
 
 						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+							<article id="joke">
+								<h2 class="major">搞图</h2>
+								<span class="image main"><img src="images/peace.gif" alt="" /></span>
 							</article>
 
 						<!-- About -->
