--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 								<span class="image main"><img src="images/lf01.png" alt="" /></span>
 								<span class="image main"><img src="images/lf02.png" alt="" /></span>
 								<span class="image main"><img src="images/lf03.png" alt="" /></span>
-								<span class="image main"><img src="images/peace.gif" alt="" /></span>
+								<span class="image main"><img src="images/lf04.png" alt="" /></span>
 								<p>lf多才多艺，啥都会的。</p>
 							</article>
 
