--- a/index.html
+++ b/index.html
@@ -57,6 +57,23 @@
 							<article id="joke">
 								<h2 class="major">搞图</h2>
 								<span class="image main"><img src="images/peace.gif" alt="" /></span>
+								<span class="image main"><img src="images/gt1.png" alt="" /></span>
+								<span class="image main"><img src="images/gt2.gif" alt="" /></span>
+								<span class="image main"><img src="images/gt3.jpg" alt="" /></span>
+								<span class="image main"><img src="images/gt4.jpg" alt="" /></span>
+								<span class="image main"><img src="images/gt5.jpg" alt="" /></span>
+							</article>
+
+							<article id="truelf">
+								<h2 class="major">真正的lf！</h2>
+								<span class="image main"><img src="images/lf05.png" alt="" /></span>
+								<span class="image main"><img src="images/lf06.png" alt="" /></span>
+								<span class="image main"><img src="images/lf07.jpg" alt="" /></span>
+								<span class="image main"><img src="images/lf08.jpg" alt="" /></span>
+								<span class="image main"><img src="images/lf09.jpg" alt="" /></span>
+								<span class="image main"><img src="images/lf10.jpg" alt="" /></span>
+								<span class="image main"><img src="images/lf11.jpg" alt="" /></span>
+								<p> lf！lf！lf！lf！lf！lf！lf！lf！lf！lf！</p>
 							</article>
 
 						<!-- About -->
